--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : #"Your Sidebar Name"
-  avatar           : #"profile.png"
+  avatar           : "SAM_7699.JPG"
   bio              : #"Your biography for the left-hand sidebar"
   location         : "Toulouse, France"
   employer         :
