--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links links
 main:
     
-  - title: "Research"
-    url: /portfolio/
+  #- title: "Research"
+  #  url: /portfolio/
     
-  - title: "CV"
-    url: /cv/
+  #- title: "CV"
+  #  url: /cv/
    
