--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "www.linkedin.com/in/gosia-majewska-4a6129102"
+  linkedin         : "gosia-majewska-4a6129102"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
