--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : #"Your Sidebar Name"
+  name             : "Gosia (Małgorzata) Majewska"
   avatar           : "Malagorza MAJEWSKA (17).jpg"
   bio              : #"Your biography for the left-hand sidebar"
   location         : "Toulouse, France"
