--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Gosia (Małgorzata) Majewska"
   avatar           : "Malagorza MAJEWSKA (17).jpg"
   bio              : #"Your biography for the left-hand sidebar"
-  location         : "Toulouse, France"
+  location         : "Paris, France"
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : #"http://yourfullgooglescholarurl.com"
